<resources>
    <string name="app_name">MentorConnect</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? LOGIN.</string>
    <string name="password">Password</string>
    <string name="hint">hint</string>
    <string name="username">Username</string>
    <string name="codeHive_id">codeHive ID</string>
    <string name="email">Email</string>
    <string name="lastname">LastName</string>
    <string name="firstname">Firstname</string>
    <string name="sign_up">Sign up</string>
    <string name="Firstname">firstname</string>
</resources>